--- a/aboutMe.html
+++ b/aboutMe.html
@@ -15,8 +15,8 @@
 				</ul>
 			</nav>
 		</header>
+		<div class= "aboutMeBox">
 			<h2>About Me</h2>		
-				<div class= "introduction">
 					<p>
 						Hellooo I'm Steve. 
 						I am an undergraduate at Illinois Institute of Technology. <br>
@@ -24,12 +24,12 @@
 						I have an orange tabby named Cheeto, who is both adorable and a jerk simultaneously. :/<br>
 						Here he is! <br>
 						<br>
-						<img src="http://puu.sh/tJm0j/bfdb1891a9.jpg" alt="cheeto cat2">
+						<img src="http://i.imgur.com/ZJb57ec.jpg" alt="cheeto cat2">
 					</p>
-				</div>
+				
 			
 			<h2>Classes</h2>
-				<div class= "introduction">
+				
 					<ul>
 						<li>PSYC-301: Industrial Psychology</li>
 						<li>ITM-100: Intro to IT as a Profession</li>
