--- a/cat.html
+++ b/cat.html
@@ -16,25 +16,21 @@
 				</ul>
 			</nav>
 		</header>
-		<h1>yo check out my cat</h1>
-			<p>hey so i have this really cute cat right. </p>
-			<img src="http://puu.sh/tJknB/edc3466789.jpg" alt="cheeto1"
-				width="400"
-				height="400">
-
-			<p> meet ch- wait a minute that's not... one second." </p>
-			<img src="http://puu.sh/tJkrJ/252fdd5933.jpg" alt="cheeto2"
-				width="550"
-				height="400">>
-			<p> There we go, look at him and his water bowl. What a cute water bowl c:</p>
-			<p> annnnnnd here's him when he was a kitten </p>
-			<img src="http://puu.sh/tJkEK/467f248ddc.jpg" alt ="cheeto3"
-				width = "400"
-				height ="600">
-
-			<p>If you want more plz like, subscrib- wait wrong website nvm. </p>
-		<footer>
-			<p>"Created for ITM-361 Project 2"</p>
-		</footer>
+		<div class="photoGallery">
+			<h1>Hi this is Cheeto:</h1>
+				<p>*GASPP*</p>
+				<img src="http://i.imgur.com/fWxFzYE.jpg" alt="cheeto1"
+					height="400">
+				<p> first thing in the morning..." </p>
+				<img src="http://i.imgur.com/De2BS8B.jpg" alt="cheeto2"
+					height="400">>
+				<p> snek</p>				
+				<img src="http://puu.sh/tJkEK/467f248ddc.jpg" alt ="cheeto3"w					
+					height ="600">
+		</div>
+			<footer>
+				<p>"Created for ITM-361 Project 2"</p>
+			</footer>
+		
 	</body>
 	</html>
