--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>Stevetest_Resume</title>
+		<title>Resume</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		
 	</head>
