moved around some files
added images and put them into a folder
moved style.css into it's own folder, may break. care

--- a/cat.html
+++ b/cat.html
@@ -25,7 +25,7 @@
 				<img src="http://i.imgur.com/De2BS8B.jpg" alt="cheeto2"
 					height="400">>
 				<p> snek</p>				
-				<img src="http://puu.sh/tJkEK/467f248ddc.jpg" alt ="cheeto3"w					
+				<img src="http://puu.sh/tJkEK/467f248ddc.jpg" alt ="cheeto3"				
 					height ="600">
 		</div>
 			<footer>
