added image size and media queries
resized the cheeto pictures in aboutMe.html
added media query as to professor suggestion

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -23,10 +23,9 @@
 						I love tinkering with computers, video games, and playing music.<br>
 						I have an orange tabby named Cheeto, who is both adorable and a jerk simultaneously. :/<br>
 						Here he is! <br>
-						<br>
-						<img src="http://i.imgur.com/ZJb57ec.jpg" alt="cheeto cat2">
+						<br>				
+					<img src="http://i.imgur.com/ZJb57ec.jpg" alt="cheeto cat2" width = "480">
 					</p>
-				
 			
 			<h2>Classes</h2>
 				
