--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,7 +2,7 @@
 		<head>
 			<meta charset="utf-8"/>
 			<title>Hi im steve</title>
-			<link rel="stylesheet" type="text/css" href="style.css">
+			<link rel="stylesheet" type="text/css" href="CSS/style.css">
 		</head>
 		<body>
 		<header>
