--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Resume</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="CSS/style.css">
 		
 	</head>
 	<body>
