This commit adds map.html and changes the the CSS.style page changing map.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 		<meta charset="utf-8"/>
 		<title>Stevetest_Resume</title>
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
-		
 	</head>
 	<body>
 	<div class="bigbox">
@@ -13,7 +12,8 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="resume.html">Resume</a></li>
 					<li><a href="aboutMe.html">About</a></li>
-					<li><a href="cat.html"> Cat</a></li>					
+					<li><a href="cat.html"> Cat</a></li>	
+					<li><a href="map.html"> Map</a></li>
 				</ul>
 			</nav>
 		</header>	
