--- a/aboutMe.html
+++ b/aboutMe.html
@@ -11,7 +11,8 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="resume.html">Resume</a></li>
 					<li><a href="aboutMe.html">About</a></li>
-					<li><a href="cat.html"> Cat</a></li>					
+					<li><a href="cat.html"> Cat</a></li>
+					<li><a href="map.html"> Map</a></li>
 				</ul>
 			</nav>
 		</header>
